Retry WriteConcernError exceptions in DDL coordinators

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.0.4, 5.1.0-rc0
    • Affects Version/s: 5.1.0, 5.0.3
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • v5.0
    • 20
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      A test running on a machine with network problems resulted in a createCollection failure because of a WriteConcernFailed exception. Such error must be included in the ones retriable while performing a DDL in order not to release coordinators half-way.

      Objective of this ticket is to add the WriteConcernError category (that includes the above mentioned exception) to the handled errors.

            Assignee:
            Pierlauro Sciarelli
            Reporter:
            Pierlauro Sciarelli
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: