SERVER-60266 Retry WriteConcernError exceptions in DDL coordinators